test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/bit_shift_string.plx
#  can't apply << or >> to strings
pub fn main(none) i32 {
    "foo" << 3
    return 0
}
